name:                Haskell-EllipticCurve
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/Haskell-EllipticCurve#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

test-suite test
  type: exitcode-stdio-1.0
  hs-source-dirs:      tests
  main-is:             test.hs
  build-depends:       base >= 4.7 && < 5
                     , Haskell-EllipticCurve
                     , QuickCheck
                     , tasty
                     , tasty-quickcheck

source-repository head
  type:     git
  location: https://github.com/githubuser/Haskell-EllipticCurve
